--- a/App/Base.lproj/App.storyboard
+++ b/App/Base.lproj/App.storyboard
@@ -22,23 +22,37 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Hbw-nh-cGe">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="cGr-di-2hY">
-                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="itemSize" width="100" height="100"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Wd8-aV-45r">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="StickerCollectionCell" id="Wd8-aV-45r" customClass="StickerCollectionCell" customModule="PhotoStickers" customModuleProvider="target">
+                                        <rect key="frame" x="10" y="10" width="100" height="100"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ReS-VE-pYf">
+                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                </imageView>
+                                            </subviews>
                                         </view>
+                                        <constraints>
+                                            <constraint firstItem="ReS-VE-pYf" firstAttribute="top" secondItem="Wd8-aV-45r" secondAttribute="top" id="Ghm-qn-0MS"/>
+                                            <constraint firstAttribute="trailing" secondItem="ReS-VE-pYf" secondAttribute="trailing" id="P2b-vo-d6w"/>
+                                            <constraint firstAttribute="bottom" secondItem="ReS-VE-pYf" secondAttribute="bottom" id="n8L-dr-Edw"/>
+                                            <constraint firstItem="ReS-VE-pYf" firstAttribute="leading" secondItem="Wd8-aV-45r" secondAttribute="leading" id="xPV-Ae-okg"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="ReS-VE-pYf" id="ceT-BG-veG"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -46,17 +60,16 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <navigationItem key="navigationItem" id="tGu-nI-cYD">
-                        <barButtonItem key="leftBarButtonItem" systemItem="edit" id="iTe-au-qMM"/>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="SxV-cq-Vib"/>
                     </navigationItem>
                     <connections>
-                        <outlet property="addButton" destination="SxV-cq-Vib" id="c5z-SW-ZYo"/>
-                        <outlet property="editButton" destination="iTe-au-qMM" id="RaM-nY-7pi"/>
+                        <outlet property="addButtonItem" destination="SxV-cq-Vib" id="93M-bf-tCa"/>
+                        <outlet property="stickerCollectionView" destination="Hbw-nh-cGe" id="dcj-h0-QyC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="837.60000000000002" y="44.527736131934034"/>
+            <point key="canvasLocation" x="853.60000000000002" y="44.527736131934034"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="gbp-ZZ-OD8">
