--- a/App/Storyboards/Base.lproj/App.storyboard
+++ b/App/Storyboards/Base.lproj/App.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Photo Stickers-->
+        <!--Sticker Collection Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="StickerCollectionViewController" id="BYZ-38-t0r" customClass="StickerCollectionViewController" customModule="PhotoStickers" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="StickerCollectionViewController" id="BYZ-38-t0r" userLabel="Sticker Collection Controller" customClass="StickerCollectionViewController" customModule="PhotoStickers" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -22,7 +22,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Hbw-nh-cGe">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Hbw-nh-cGe" userLabel="Sticker Collection View">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -33,14 +33,14 @@
                                     <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="StickerCollectionCell" id="Wd8-aV-45r" customClass="StickerCollectionCell" customModule="PhotoStickers" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="StickerCollectionCell" id="Wd8-aV-45r" userLabel="Sticker Collection Cell" customClass="StickerCollectionCell" customModule="PhotoStickers" customModuleProvider="target">
                                         <rect key="frame" x="10" y="10" width="100" height="100"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ReS-VE-pYf">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ReS-VE-pYf" userLabel="Sticker Image View">
                                                     <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                                 </imageView>
                                             </subviews>
@@ -61,8 +61,8 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Photo Stickers" id="tGu-nI-cYD">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="SxV-cq-Vib">
+                    <navigationItem key="navigationItem" title="Photo Stickers" id="tGu-nI-cYD" userLabel="Sticker Collection Navigation Bar">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="SxV-cq-Vib" userLabel="Add Button">
                             <connections>
                                 <segue destination="mHK-wh-jhb" kind="showDetail" identifier="AddStickerSeque" id="jbz-Sz-vci"/>
                             </connections>
@@ -77,10 +77,10 @@
             </objects>
             <point key="canvasLocation" x="853.60000000000002" y="44.527736131934034"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Edit Sticker Navigation Controller-->
         <scene sceneID="8s5-LR-Lwg">
             <objects>
-                <navigationController storyboardIdentifier="EditStickerNavigationController" toolbarHidden="NO" id="mHK-wh-jhb" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="EditStickerNavigationController" toolbarHidden="NO" id="mHK-wh-jhb" userLabel="Edit Sticker Navigation Controller" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ezs-dE-6ca">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -97,10 +97,10 @@
             </objects>
             <point key="canvasLocation" x="854" y="794"/>
         </scene>
-        <!--Sticker-->
+        <!--Edit Sticker Controller-->
         <scene sceneID="fky-Nl-cnS">
             <objects>
-                <viewController storyboardIdentifier="EditStickerViewController" automaticallyAdjustsScrollViewInsets="NO" id="xY5-ie-FY6" customClass="EditStickerViewController" customModule="PhotoStickers" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="EditStickerViewController" automaticallyAdjustsScrollViewInsets="NO" id="xY5-ie-FY6" userLabel="Edit Sticker Controller" customClass="EditStickerViewController" customModule="PhotoStickers" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="asa-D8-eDb"/>
                         <viewControllerLayoutGuide type="bottom" id="EuG-up-7tU"/>
@@ -109,31 +109,39 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.10000000000000001" maximumZoomScale="2" translatesAutoresizingMaskIntoConstraints="NO" id="Jlx-aC-2O3" customClass="ImageScrollView" customModule="PhotoStickers" customModuleProvider="target">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.10000000000000001" maximumZoomScale="2" translatesAutoresizingMaskIntoConstraints="NO" id="Jlx-aC-2O3" userLabel="Original Image Scroll View" customClass="ImageScrollView" customModule="PhotoStickers" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="64" width="375" height="375"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Jlx-aC-2O3" secondAttribute="height" multiplier="1:1" id="2o9-Gt-lwd"/>
                                 </constraints>
                             </scrollView>
+                            <view userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o6U-nq-xdI" userLabel="Edit Sticker Mask View" customClass="MaskView" customModule="PhotoStickers" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="64" width="375" height="375"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="o6U-nq-xdI" firstAttribute="top" secondItem="Jlx-aC-2O3" secondAttribute="top" id="2eY-I9-pEk"/>
+                            <constraint firstItem="o6U-nq-xdI" firstAttribute="right" secondItem="Jlx-aC-2O3" secondAttribute="right" id="6W7-2a-de0"/>
                             <constraint firstItem="Jlx-aC-2O3" firstAttribute="width" secondItem="63h-fZ-lFi" secondAttribute="width" priority="750" id="7cc-Gr-EzC"/>
                             <constraint firstItem="Jlx-aC-2O3" firstAttribute="top" secondItem="asa-D8-eDb" secondAttribute="bottom" id="FsC-Ii-6dV"/>
+                            <constraint firstItem="o6U-nq-xdI" firstAttribute="left" secondItem="Jlx-aC-2O3" secondAttribute="left" id="LvD-Gr-RzT"/>
                             <constraint firstItem="Jlx-aC-2O3" firstAttribute="height" relation="lessThanOrEqual" secondItem="63h-fZ-lFi" secondAttribute="height" id="MY1-jI-FU9"/>
                             <constraint firstItem="Jlx-aC-2O3" firstAttribute="height" secondItem="63h-fZ-lFi" secondAttribute="height" priority="750" id="Otn-pE-boa"/>
+                            <constraint firstItem="o6U-nq-xdI" firstAttribute="bottom" secondItem="Jlx-aC-2O3" secondAttribute="bottom" id="ToH-AD-n6r"/>
                             <constraint firstItem="Jlx-aC-2O3" firstAttribute="width" relation="lessThanOrEqual" secondItem="63h-fZ-lFi" secondAttribute="width" id="cyk-zn-eNh"/>
                             <constraint firstItem="Jlx-aC-2O3" firstAttribute="left" secondItem="63h-fZ-lFi" secondAttribute="left" id="zPD-MS-oN7"/>
                         </constraints>
                     </view>
                     <toolbarItems>
-                        <barButtonItem systemItem="trash" id="UY9-Yv-yfg"/>
+                        <barButtonItem systemItem="trash" id="UY9-Yv-yfg" userLabel="Delete Button"/>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="4Ef-qB-gCQ"/>
-                        <barButtonItem systemItem="camera" id="zho-8l-mAf"/>
+                        <barButtonItem systemItem="camera" id="zho-8l-mAf" userLabel="Photo Library Button"/>
                     </toolbarItems>
-                    <navigationItem key="navigationItem" title="Sticker" id="3cS-n0-mdI">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="HGg-xK-bhk"/>
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="ylz-y4-7pV"/>
+                    <navigationItem key="navigationItem" title="Sticker" id="3cS-n0-mdI" userLabel="Edit Sticker Navigation Bar">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="HGg-xK-bhk" userLabel="Cancel Button"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="ylz-y4-7pV" userLabel="Save Button"/>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
@@ -148,10 +156,10 @@
             </objects>
             <point key="canvasLocation" x="1605.5999999999999" y="793.8530734632684"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Sticker Collection Navigation Controller-->
         <scene sceneID="gbp-ZZ-OD8">
             <objects>
-                <navigationController storyboardIdentifier="MainNavigationController" id="7oO-ML-e6r" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="MainNavigationController" id="7oO-ML-e6r" userLabel="Sticker Collection Navigation Controller" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="AEa-As-IWY">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
